--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -182,13 +182,24 @@ footer{
             }
         }
         .sectionProximosCursos{
+            margin-left: 2px;
+            margin-right: 2px;   
+            margin: auto; 
+            margin-top: 20px;
+            margin-bottom: 20px; 
             .cajaProximosCursos{
                 flex-direction: column;
-                .proximoCurso{
-                    align-self: center;
-                }
+                .proximoCurso{                                       
+                    width: 100%;
+                    border: $color-cajas 5px solid;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                 }
             }
         }
+        
         .cajaBlog{                
                 .divImagenYtituloBlog{
                     flex-direction: column;
@@ -414,7 +425,7 @@ footer{
                     border: $color-cajas 5px solid;
                     img{
                         width: 100%;
-                       height: 100%;
+                        height: 100%;
                     }
                     .divCalltoaction{
                         .calltoaction{                       
