--- a/scss/_kettlebells.scss
+++ b/scss/_kettlebells.scss
@@ -75,9 +75,13 @@ main{
                 align-items: flex-end;
                 flex-direction: row;
                 text-decoration: none;
-                .calltoaction{
-                    @include boton ($color-boton)
-                }         
+                .botonContacto{
+                    text-decoration: none;
+                    .calltoaction{
+                        @include boton ($color-boton)
+                    }  
+                }
+                       
             }     
         }
         .carousel{
